# bcn-rainfall-api

./: CHANGELOG.md  README.md  config.yml  pyproject.toml  requirements.txt  run.py
bcn_rainfall_api/: __init__.py  app.py  config.py
bcn_rainfall_api/routes/: __init__.py  csv.py  graph.py  rainfall.py  year.py
bcn_rainfall_api/utils/: __init__.py
tst/: test_app.py
tst/utils/: test_errors.py
